# platform.core.appfw.vconf-buxton

./: CMakeLists.txt
include/: log.h  vconf-buxton-keys.h  vconf-buxton.h  vconf.h
packaging/: vconf-buxton.spec
src/: CMakeLists.txt  vconf-buxton-backup-mem-layer.sh  vconf-buxton-init-from-vconf.sh  vconf-buxton-restore-mem-layer.sh  vconf-buxton-setup.service  vconf-buxton-tool.c  vconf-buxton-tool.sh  vconf-buxton.c  vconf-buxton.h  vconf-buxton.pc.in  vconf-buxton.sym  vconf-keys.h
