
SET(SRCS vconf-buxton.c)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")

SET(CMAKE_SHARED_LINKER_FLAGS "-Wl,--version-script=vconf-buxton.sym")

IF(NOT DEFINED LIBNAME)
  SET(LIBNAME ${PROJECT_NAME})
ENDIF()

IF(NOT DEFINED TOOLNAME)
  SET(TOOLNAME vconf-buxton-tool)
ENDIF()


ADD_LIBRARY(${LIBNAME} SHARED ${SRCS})
SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES SOVERSION ${VERSION_MAJOR})
SET_TARGET_PROPERTIES(${LIBNAME} PROPERTIES VERSION ${VERSION})
TARGET_LINK_LIBRARIES(${LIBNAME} ${glib_pkg_LDFLAGS} ${pkgs_LDFLAGS})

ADD_EXECUTABLE(${TOOLNAME} vconf-buxton-tool.c)
TARGET_LINK_LIBRARIES(${TOOLNAME} ${pkgs_LDFLAGS} ${glib_pkg_LDFLAGS} ${LIBNAME})

CONFIGURE_FILE(${PROJECT_NAME}.pc.in ${LIBNAME}.pc @ONLY)
SET_DIRECTORY_PROPERTIES(PROPERTIES ADDITIONAL_MAKE_CLEAN_FILES "${LIBNAME}.pc")

INSTALL(TARGETS ${LIBNAME} DESTINATION ${LIB_INSTALL_DIR})
INSTALL(TARGETS ${TOOLNAME} DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/src/vconf-buxton-init-from-vconf.sh DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/src/vconf-buxton-restore-mem-layer.sh DESTINATION bin)
INSTALL(PROGRAMS ${CMAKE_SOURCE_DIR}/src/vconf-buxton-backup-mem-layer.sh DESTINATION bin)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/vconf-buxton.h DESTINATION include/vconf)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/vconf-buxton-keys.h DESTINATION include/vconf)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/vconf-buxton-setup.service DESTINATION ${SYSTEMDDIR})
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/vconf.h DESTINATION include/vconf)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/src/vconf-keys.h DESTINATION include/vconf)

